--- a/_layouts/categorypage.html
+++ b/_layouts/categorypage.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 ---
-<h1>{{ page.category }}</h1>
+<h1>{{ page.category | capitalize }}</h1>
 
 <ul>
 {% for post in site.categories[page.category] %}
   <li>
-    {{ post.date | date: "%B %d, %Y" }}: <a href="{{ post.url }}">{{ post.title }}</a>
+    {{ post.date | date: "%B %d, %Y" }}: <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
   </li>
 {% endfor %}
 </ul>
