--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,5 +1,6 @@
 ---
 ---
+@import "./syntax.css";
 
 .table {
   border: 1px solid #ddd;
@@ -91,4 +92,20 @@
 
 .main-content {
   width: 75%;
+}
+
+
+.post-title {
+  font-size: 35px;
+  @media screen and (max-width: 800px) {
+    font-size : 25px;
+  }
+}
+
+pre, code {
+  background: #e7e7e7;
+}
+
+.highlighter-rouge {
+  color: #ff2d2d;
 }
