--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <body>
 
     {% include header.html %}
-    <main class="page-content" aria-label="Content">
+    <div class="page-content clearfix" aria-label="Content">
 
         {% include sidebar.html %}
         <div class="wrapper main-content">
@@ -40,7 +40,7 @@
 
         </div>
 
-    </main>
+    </div>
     {% include footer.html %}
 
   </body>
