add post djago-react-docker 2

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -109,6 +109,11 @@
   color: #ff2d2d;
 }
 
+.highlighter-rouge .highlight {
+  color: #000;
+  background: #e7e7e7;
+}
+
 .page-content {
   padding: 0;
 }
